Fix alignment of main nav

--- a/wp-content/themes/aslan2014/assets/styles/_mixins.scss
+++ b/wp-content/themes/aslan2014/assets/styles/_mixins.scss
@@ -5,7 +5,7 @@
 	margin: 0 -1em -.1em;
 	padding: .25em 2em;
 	background: $banner-color;
-	text-align: right;
+	text-align: center;
 	border: 1px solid #666;
 	min-height: 3.8em;
 	&:after,
